 - For Android 10+ devices, we'll temporarily disable storage selection from settings
   until we make sure we can integrate it for Android 10+ devices
   without external writing permissions
 - File deletion action not available for external media files not downloaded by FrostWire
 - remove ignoreHardwareMenu logic, physical menu key a thing of the past
 - com.google.gms:google-services:4.3.8
 - com.google.firebase:firebase-crashlytics-gradle:2.7.0

FrostWire 2.3.1 build 678 - APR/23/2021
 - SoundCloud search & downloads fixed
 - androidx.media2:media2:1.1.3
 - androidx.recyclerview:recyclerview:1.2.0
 - com.google.android.gms:play-services-ads:20.0.0
 - com.google.firebase:firebase-crashlytics-gradle:2.5.2
 - com.applovin:applovin-sdk:10.1.2
 - com.unity3d.ads:unity-ads:3.6.2
 - don't crash on removeFromPlaylist error

FrostWire 2.3.0 build 677 - MAR/24/2021
 - New jlibtorent 1.2.13.0
 - com.google.firebase:firebase-bom:26.7.0
 - com.android.billingclient:billing:3.0.3
 - com.google.android.gms:play-services-ads:19.8.0
 - androidx.annotation:annotation:1.2.0
 - com.mopub:mopub-sdk-banner:5.16.3
 - dev: com.android.tools.build:gradle:4.1.3
 - com.applovin:applovin-sdk:10.0.1
 - com.mopub.mediation:applovin:10.0.1.0
 - lt:fix incoming TCP connections when using tracker-only proxy
 - lt:fix issue with paths starting with ./
 - lt:fix integer overflow when setting a high DHT upload rate limit
 - lt:improve Path MTU discovery logic in uTP
 - lt:fix overflow issue when rlimit_nofile is set to infinity
 - lt:Fix cxxflags and linkflags injection via environment variables

FrostWire 2.2.9 build 675 - FEB/16/2021
 - New jlibtorrent 1.2.12.0
 - Mopub 5.16.0: s/RewardedVideo/RewardedAd/g refactor
 - lt:fix loading of DHT node ID from previous session on startup
 - lt:use getrandom(), when available, and fall back to /dev/urandom
 - lt:fix uTP issue acking FIN packets
 - lt:validate HTTPS certificates by default (trackers and web seeds)